objects/Material_Sent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Materials Sent</relationshipLabel>
        <relationshipName>Materials_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Enrollment</label>
        <referenceTo>HCP_Enrollment__c</referenceTo>
        <relationshipLabel>Materials Sent</relationshipLabel>
        <relationshipName>Materials_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Materials Sent</relationshipLabel>
        <relationshipName>Materials_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Sent__c</fullName>
        <label>Material Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Material_Sent</valueSetName>
        </valueSet>
    </fields>
    <label>Material Sent</label>
    <nameField>
        <label>Material Sent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>